--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <script src="p5.min.js"></script>
     <script src="p5.dom.min.js"></script>
-   
+    <script src="p5.sound.min.js"></script>
     <script src="matter.js"></script>
     <script src="BaseClass.js"></script>
     <script src="Ground.js"></script>
@@ -12,10 +12,8 @@
     <script src="Log.js"></script>
     <script src="Bird.js"></script>
     <script src="Slingshot.js"></script>
-    <script src="chain.js"></script>
-    <script src="Mallet.js"></script>
-    <script src="Player.js"></script>
-    <script src="matter.js"></script>
+    <script src="redBird.js"></script>
+    <script src="yellowBird.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
 </head>
